--- a/client/public/html/sign-up.html
+++ b/client/public/html/sign-up.html
@@ -10,10 +10,8 @@
 		<h3>If you have an account, please Sign In Here</h3>
 		<div class="well">
 			<form id="sign-in-form">
-				<label>Username</label><br>
+				<label>Name</label><br>
 				<input type="text" id="username-input"/><br>
-				<label>Password</label><br>
-				<input type="password" id="password-input"/><br><br>
 				<label>Birthday</label><br>
 				<input type="date" name="birthday"><br><br>
 				<input class="btn btn-danger" type="submit">
