Front end coming together

--- a/client/public/html/home.html
+++ b/client/public/html/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>First Postgres Template</title>
+	<title>Zodiaque</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./public/css/home.css">
 </head>
@@ -11,11 +11,14 @@
 			<h1>Welcome to Zodiaque</h1>
 			<h2>Sign In or Sign Up to view your Horoscope</h2>
 		</div>
-		<div class="text-center center-block">
-			<div id="direct-buttons" class="btn-group" role="group" aria-label="Basic example">
-			  <a href="/sign-up" type="button" id="sign-up-button" class="btn btn-primary sign-buttons">Sign Up</a>
-			  <a href="/sign-in" type="button" id="sign-in-button" class="btn btn-info sign-buttons">Sign In</a>
-			</div>
+		<div class="well text-center">
+			<form id="sign-up-form">
+				<label>Name</label><br>
+				<input type="text" id="name-input"/><br>
+					<label>Birthday</label><br>
+					<input type="date" id="birthdate-input" name="birthday"><br><br>
+				<input class="btn btn-danger" type="submit">
+			</form>
 		</div>
 	</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
