--- a/client/public/html/sign-up.html
+++ b/client/public/html/sign-up.html
@@ -9,11 +9,11 @@
 	<div class="container">
 		<h3>If you have an account, please Sign In Here</h3>
 		<div class="well">
-			<form id="sign-in-form">
+			<form id="sign-up-form">
 				<label>Name</label><br>
-				<input type="text" id="username-input"/><br>
+				<input type="text" id="name-input"/><br>
 					<label>Birthday</label><br>
-					<input type="date" name="birthday"><br><br>
+					<input type="date" id="birthdate-input" name="birthday"><br><br>
 				<input class="btn btn-danger" type="submit">
 			</form>
 		</div>
