--- a/client/public/html/home.html
+++ b/client/public/html/home.html
@@ -13,10 +13,12 @@
 		</div>
 		<div class="well text-center">
 			<form id="sign-up-form">
-				<label>Name</label><br>
-				<input type="text" id="name-input"/><br>
+					<label>Name</label><br>
+					<input type="text" id="name-input"/><br>
 					<label>Birthday</label><br>
 					<input type="date" id="birthdate-input" name="birthday"><br><br>
+					<label>Your Sign</label><br>
+					<input type="text" id="zodiac-input"/><br><br>
 				<input class="btn btn-danger" type="submit">
 			</form>
 		</div>
