--- a/client/public/html/home.html
+++ b/client/public/html/home.html
@@ -6,10 +6,14 @@
 	<link rel="stylesheet" type="text/css" href="./public/css/home.css">
 </head>
 <body>
+	<div class="wrapper">
+		<h1 class= "top-header" style="display: inline;">ZODIAQUE</h1>
+		<img src="./public/img/zodiac.png" style="display: inline;" alt="logo">
+	</div>
 	<div class="container">
 		<div class="jumbotron text-center">
-			<h1>Welcome to Zodiaque</h1>
-			<h2>Sign In or Sign Up to view your Horoscope</h2>
+			<h2 class="h1-tag">Welcome to Zodiaque</h2>
+			<h3 class="h2-tag">Fill out the form and submit to see your Horoscope</h3>
 		</div>
 		<div class="well text-center">
 			<form id="sign-up-form">
@@ -18,7 +22,21 @@
 					<label>Birthday</label><br>
 					<input type="date" id="birthdate-input" name="birthday"><br><br>
 					<label>Your Sign</label><br>
-					<input type="text" id="zodiac-input"/><br><br>
+					<select id="dropdown-menu">
+					  <option value="null">Choose Your Sign</option>
+					  <option value="Aquarius">Aquarius</option>
+					  <option value="Pisces">Pisces</option>
+					  <option value="Aries">Aries</option>
+						<option value="Taurus">Taurus</option>
+						<option value="Gemini">Gemini</option>
+						<option value="Cancer">Cancer</option>
+						<option value="Leo">Leo</option>
+						<option value="Virgo">Virgo</option>
+						<option value="Libra">Libra</option>
+						<option value="Scorpio">Scorpio</option>
+						<option value="Sagittarius">Sagittarius</option>
+						<option value="Capricorn">Capricorn</option>
+					</select><br><br>
 				<input class="btn btn-danger" type="submit">
 			</form>
 		</div>
